src/styles/style.css
main {
  height: 500px;
  width: 700px;
  z-index: 2;
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  margin-right: 100px;
  gap: 30px;
}

article > p {
  background-color: rgba(0, 0, 0, 0.089);
  padding: 4px;
  border-radius: 15px;
}

button > p {
  color: orange;
}

form {
  display: flex;
  justify-content: center;
}

